--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
     <hr>
     <h1><u>Menu</u></h1>
     <h1>Veg Biryani</h1>
-    <img src="./html/Images/th.jpeg" width="300" height="300"/><br>
+    <img src="./th.jpeg" width="300" height="300"/><br>
     <a href="http://127.0.0.1:3000/task6.1.html">
     <button type="button">knowmore</button></a>
     <h1>Non Veg</h1>
-    <img src="./html/Images/non veg.avif" width="300" height="300"/><br>
+    <img src="./non veg.avif" width="300" height="300"/><br>
     <a href="http://127.0.0.1:3000/task6.2.html">
     <button type="knowmore">Knowmore</button></a>
     <h1>Veg Staters</h1>
-    <img src="./html/Images/veg staters.jpeg" width="300" height ="300"/><br>
+    <img src="./staters.jpeg" width="300" height ="300"/><br>
     <a href="http://127.0.0.1:3000/task6.3.html">
     <button type="knowmore">Knowmore</button></a>
     <h1>Non veg Staters</h1>
-    <img src="./html/Images/non veg staters.jpeg" width="300" height="300"/><br>
+    <img src="./non veg staters.jpeg" width="300" height="300"/><br>
     <a href="http://127.0.0.1:3000/task6.4.html">
     <button type="knowmore">Knowmore</button></a><br>
-    <video controls autoplay with muted loop src="html\Images\production_id_4092617 (2160p).mp4" width="500" height="500"></video>
+    <video controls autoplay with muted loop src="./production_id_4092617 (2160p).mp4" width="500" height="500"></video>
     <hr>
     <h2>contact us</h2>
    <h3><a href="call">call us</a></h3>
